--- a/index.html
+++ b/index.html
@@ -2,33 +2,27 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
-		<title>COPE Demo Application</title>
+		<title>MxSampler</title>
 		<link rel="STYLESHEET" type="text/css" href="src/com/exedio/copedemo/admin/admin.css">
 	</head>
 	<body>
 		<a href="http://cope.sourceforge.net/" target="_blank"><img src="src/com/exedio/copedemo/admin/logo.png" alt="Exedio Logo" class="logo"></a>
-		<h1>COPE Demo Application</h1>
+		<h1>MxSampler</h1>
 		<h2>Introduction</h2>
 		<div>
-			This is the demo application for
-			<a href="http://cope.sourceforge.net/" target="_blank">COPE</a>.
-			This application is shall demonstrate the use of the COPE
-			persistence framework within a typical business web application.
-			You may also use it as a template for your own application.
-			The demo application is published under the
-			<a href="http://www.opensource.org/licenses/mit-license.php" target="_blank">MIT License</a>.
+			This is the mxsampler web application.
 		</div>
 		<h2>Installation</h2>
 		<div>
 			The following step by step procedure deploys the
-			COPE Demo on the
+			mxsampler on the
 			<a href="http://tomcat.apache.org/" target="_blank">jakarta tomcat</a>
 			servlet container included in this distribution package.
 		</div>
 		<ol>
 			<li>
 				Configure database:<br>
-				The demo application is already configured to use a
+				The mxsampler is already configured to use a
 				<a href="http://hsqldb.org/" target="_blank">hsqldb</a>
 				in-memory database.
 				If this is ok for you,
@@ -48,7 +42,7 @@
 			</li>
 			<li>
 				Open the
-				<a href="http://localhost:8080/copedemo/admin/" target="_blank">Administration Area</a>
+				<a href="http://localhost:8080/mxsampler/admin/" target="_blank">Administration Area</a>
 				for the second part of the installation,
 				using login <i>admin</i> and password <i>nimda</i>.
 			</li>
