--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			</li>
 			<li>
 				Open the
-				<a href="http://localhost:8080/mxsampler/admin/" target="_blank">Administration Area</a>
+				<a href="http://localhost:8080/mxsampler/" target="_blank">Administration Area</a>
 				for the second part of the installation,
 				using login <i>admin</i> and password <i>nimda</i>.
 			</li>
