link to exedio.github.io instead cope.sourceforge.net

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="STYLESHEET" type="text/css" href="src/com/exedio/copedemo/admin/admin.css">
 	</head>
 	<body>
-		<a href="http://cope.sourceforge.net/" target="_blank"><img src="src/com/exedio/copedemo/admin/logo.png" alt="Exedio Logo" class="logo"></a>
+		<a href="https://exedio.github.io/" target="_blank"><img src="src/com/exedio/copedemo/admin/logo.png" alt="Exedio Logo" class="logo"></a>
 		<h1>MxSampler</h1>
 		<h2>Introduction</h2>
 		<div>
