idea inspection: Redundant closing tag for HTML element

--- a/csrf.html
+++ b/csrf.html
@@ -15,8 +15,8 @@
 		<h3>Sending Emails</h3>
 		<form method="post" action="https://localhost:8443/mxsampler/email.html">
 			Email Address:
-			<input name="test.email.address" size="40"></input>
-			<input type="submit" value="Send"></input>
+			<input name="test.email.address" size="40">
+			<input type="submit" value="Send">
 		</form>
 		<h3>Creating Database Schema</h3>
 		<form method="post" action="https://localhost:8443/mxsampler/console/schema.html">
